# makerbot_tools

./: .bowerrc  .gitignore  README.rst  buildout.cfg  conveyor-dev.conf  error.py  server.py  setup.py
etc/: rc.local
makerbot_tools/: client.py  commands.py  crontab.py  s3b_card_files.py  s3b_printer.py  scripts.py  web.py
makerbot_tools/static/: main.js
makerbot_tools/static/blueimp-file-upload/: bower.json
makerbot_tools/views/: apsetup.html  apsetupconfirm.html  cron.html  index.html  layout.html  printviewer.html
printsupervisor/: CMakeCache.txt  CMakeLists.txt  Makefile  backup_V001_slower_code.cpp  cmake_install.cmake  printsupervisor  printsupervisor.cpp  usersetings.yml
printsupervisor/files/old/: source  source2  source3  source4  source7  source8  template_custome  template_custome2
